öğrenci kategori arama hatası düzeltme, ssl bağlantısı için URL (ama gelmicek güvenlik için atmıyo wpden atıcam)

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ DB_PASS=RobotumTR1*
 DB_HOST=aws-0-eu-north-1.pooler.supabase.com
 DB_PORT=6543
 DB_NAME=postgres
+DATABASE_URL: postgresql://postgres.okrdwagznmjpgzcapgiu:RobotumTR1*@aws-0-eu-north-1.pooler.supabase.com:6543/postgres
+SESSION_SECRET=robotum-app-secret-key-2024
+NODE_ENV=development
