--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DB_NAME=postgres
 DATABASE_URL= postgresql://postgres.okrdwagznmjpgzcapgiu:RobotumTR1*@aws-0-eu-north-1.pooler.supabase.com:6543/postgres
 SESSION_SECRET=robotum-app-secret-key-2024
 NODE_ENV=development
+PORT= 3000
