--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "node server.js",
     "dev": "NODE_ENV=development node server.js",
     "build": "echo 'No build step required'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pm2:start": "pm2 start ecosystem.config.js --env production",
+    "pm2:stop": "pm2 stop robotum-app",
+    "pm2:restart": "pm2 restart robotum-app",
+    "pm2:logs": "pm2 logs robotum-app"
   },
   "keywords": [],
   "author": "",
